apps/demo-website/overlays/dev/resource-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-website
spec:
  template:
    spec:
      containers:
      - name: demo-website
        resources:
          limits:
            cpu: "50m"
            memory: "128Mi"
          requests:
            cpu: "20m"
            memory: "64Mi"
